	  common-src/security-util.c common-src/bsdudp-security.c:
	  bugfixes, always check for NULL ai_canonname
	* common-src/util.c common-src/util.h common-src/krb4-security.c 
	  common-src/security-util.c: bugfix for hosts with multiple addresses,
	  improved cmp_sockaddr, remove redundant checks
	* server-src/taper.c: add log message when new tapes are auto-labeled

2007-03-30  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/file.c: remove unused amanda_setup()

2007-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Define a _() macro.

2007-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/krb5-security.c: Fix for krb5 and IPv6.
	* common-src/security-util.c: Fix for krb5 and IPv6.

2007-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/krb5-security.c: Compile with heimdal kerberos.

2007-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	Fix solaris 9 problem:
	* common-src/krb5-security.c: Use putenv instead of setenv.
	* common-src/security-util.c: Set flags according to family.

2007-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	Merge from zmanda EXT.

2007-03-28  Dustin J. Mitchell <dustin@zmanda.com>
	* common/amanda.h: fix typo in SS_SET_INADDR_ANY for non-IPv6 
	  machines
	* gnulib/regenerate/regenerate: update to include visibility
	  and lock modules (See 2007-03-14)
	* recover-src/extract_list.c common-src/krb4-security.c
	  common-src/event.c common-src/security-util.c: use
	  SELECT_ARG_TYPE instead of fd_set

2007-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	* Makefile.am (EXTRA_DIST): Remove contrib/gnulib-update-current.

2007-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-zd-mtx.sh.in: Exit with a message if the
					configuration file doesn't exist.

2007-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix error message.

2007-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Fix segfault.
